--- a/app/src/main/res/layout/fragment_hasil.xml
+++ b/app/src/main/res/layout/fragment_hasil.xml
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline" />
 
         <Button
-            android:id="@+id/button_add_home"
+            android:id="@+id/button_add_mahasiswa"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -59,7 +59,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/button_add_away"
+            android:id="@+id/button_add_dosen"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -102,26 +102,26 @@
             app:layout_constraintTop_toTopOf="@+id/guideline" /-->
 
         <TextView
-            android:id="@+id/text_home_scorer"
-            android:layout_width="194dp"
-            android:layout_height="31dp"
-            android:layout_marginBottom="188dp"
+            android:id="@+id/text_home_mhs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="184dp"
             android:text="@{String.valueOf(mahasiswaWaktuList.size())}"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_add_home"
+            app:layout_constraintBottom_toTopOf="@+id/button_add_mahasiswa"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintHorizontal_bias="0.881"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/text_away_scorerr"
+            android:id="@+id/text_ds"
             android:layout_width="231dp"
             android:layout_height="31dp"
             android:layout_marginBottom="188dp"
             android:text="@{String.valueOf(dosenWaktuList.size())}"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_add_away"
+            app:layout_constraintBottom_toTopOf="@+id/button_add_dosen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -129,13 +129,12 @@
 
         <TextView
             android:id="@+id/text_home_scorerr"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@{fragment.mahasiswa()}"
-            app:layout_constraintBottom_toTopOf="@+id/button_add_home"
+            app:layout_constraintBottom_toTopOf="@+id/button_add_mahasiswa"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -144,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@{fragment.dosen()}"
-            app:layout_constraintBottom_toTopOf="@+id/button_add_away"
+            app:layout_constraintBottom_toTopOf="@+id/button_add_dosen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -153,25 +152,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
+            android:layout_marginTop="84dp"
             android:layout_marginEnd="54dp"
             android:text="Mahasiswa Hadir"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_home_scorer"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/text_home_mhs"
+            app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="88dp" />
+            app:layout_constraintTop_toTopOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="37dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="107dp"
             android:text="Dosen Hadir"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_away_scorerr"
+            app:layout_constraintEnd_toStartOf="@+id/text_ds"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="450dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
